Fixed typing white space for group name

--- a/src/MainPage/components/PopUps/components/UpdateLog/UpdateLog.css
+++ b/src/MainPage/components/PopUps/components/UpdateLog/UpdateLog.css
@@ -14,6 +14,7 @@
   display: flex;
   flex-direction: column;
   font-weight: 500;
+  overflow: scroll;
 }
 
 .update_log > h1 {
